--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,8 @@ description = "PRoject to learn data science in production"
 readme = "README.md"
 requires-python = ">=3.11, <3.13"
 dependencies = [
+    "fastapi>=0.115.12",
     "ipykernel>=6.29.5",
     "seaborn>=0.13.2",
+    "uvicorn>=0.34.3",
 ]
