--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.11, <3.13"
 dependencies = [
     "fastapi>=0.115.12",
+    "flask>=3.1.1",
     "ipykernel>=6.29.5",
     "seaborn>=0.13.2",
     "streamlit>=1.45.1",
