--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ dependencies = [
     "fastapi>=0.115.12",
     "flask>=3.1.1",
     "ipykernel>=6.29.5",
+    "mlflow>=3.1.4",
     "seaborn>=0.13.2",
     "streamlit>=1.45.1",
     "uvicorn>=0.34.3",
