--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "PRoject to learn data science in production"
 readme = "README.md"
 requires-python = ">=3.11, <3.13"
 dependencies = [
+    "dvc>=3.61.0",
     "fastapi>=0.115.12",
     "flask>=3.1.1",
     "ipykernel>=6.29.5",
