--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,11 +5,12 @@ description = "PRoject to learn data science in production"
 readme = "README.md"
 requires-python = ">=3.11, <3.13"
 dependencies = [
+    "dagshub>=0.6.2",
     "dvc>=3.61.0",
     "fastapi>=0.115.12",
     "flask>=3.1.1",
     "ipykernel>=6.29.5",
-    "mlflow>=3.1.4",
+    "mlflow<2.10.0",
     "seaborn>=0.13.2",
     "streamlit>=1.45.1",
     "uvicorn>=0.34.3",
