--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,6 @@ __pycache__/
 *.mypy_cache
 mlruns/
 mlartifacts/
+content/orchestration/airflow/airflow.cfg
+content/orchestration/airflow/airflow.db
+content/orchestration/airflow/simple_auth_manager_passwords.json.generated
