--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,11 +5,13 @@ description = "PRoject to learn data science in production"
 readme = "README.md"
 requires-python = ">=3.11, <3.13"
 dependencies = [
+    "apache-airflow>=3.0.4",
     "dagshub>=0.6.2",
     "dvc>=3.61.0",
     "fastapi>=0.115.12",
     "ipykernel>=6.29.5",
     "mlflow<2.10.0",
+    "prefect>=2.20.21",
     "seaborn>=0.13.2",
     "streamlit>=1.45.1",
     "uvicorn>=0.34.3",
