--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,7 @@ dependencies = [
     "graphviz>=0.21",
     "ipykernel>=6.29.5",
     "mlflow<2.10.0",
-    "prefect>=3.0.0",
+    "prefect<3.4.14.0",
     "seaborn>=0.13.2",
     "streamlit>=1.45.1",
     "uvicorn>=0.34.3",
